generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model categories {
  id            String          @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  name          String          @db.VarChar(100)
  description   String?
  created_at    DateTime?       @default(now()) @db.Timestamp(6)
  icon_url      String?
  pricing_types pricing_types[]
  services      services[]
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model admin_bank_accounts {
  id             String    @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  provider_name  String    @db.VarChar(100)
  account_number String    @db.VarChar(100)
  account_name   String    @db.VarChar(150)
  is_active      Boolean?  @default(true)
  created_at     DateTime? @default(now()) @db.Timestamp(6)
  updated_at     DateTime? @default(now()) @db.Timestamp(6)
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model admin_ewallet_accounts {
  id             String    @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  provider_name  String    @db.VarChar(100)
  account_number String    @db.VarChar(100)
  account_name   String    @db.VarChar(150)
  is_active      Boolean?  @default(true)
  created_at     DateTime? @default(now()) @db.Timestamp(6)
  updated_at     DateTime? @default(now()) @db.Timestamp(6)
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model admin_qris_accounts {
  id             String    @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  provider_name  String    @db.VarChar(100)
  qris_image_url String    @db.Text
  is_active      Boolean?  @default(true)
  created_at     DateTime? @default(now()) @db.Timestamp(6)
  updated_at     DateTime? @default(now()) @db.Timestamp(6)
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model custom_tasks {
  id                String             @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  customer_id       String             @db.Uuid
  title             String             @db.VarChar(150)
  description       String?
  budget_per_person Decimal            @db.Decimal(12, 0)
  required_people   Int                @default(1)
  accepted_count    Int                @default(0)
  platform_fee_rate Decimal            @default(5.00) @db.Decimal(4, 2)
  address           String?            @db.Text
  location_detail   String?            @db.Text
  publish_days      Int                @default(1)
  expires_at        DateTime?          @db.Timestamp(6)
  payment_proof     String?            @db.Text
  payment_status    String             @default("unpaid") @db.VarChar(30) // unpaid | proof_uploaded | paid
  location          Unsupported("geometry")?
  status            String             @default("open") @db.VarChar(30) // open | in_progress | active | completed | fulfilled | expired | cancelled
  created_at        DateTime           @default(now()) @db.Timestamp(6)
  updated_at        DateTime           @updatedAt @db.Timestamp(6)
  users             users              @relation(fields: [customer_id], references: [id], onDelete: NoAction, onUpdate: NoAction)
  task_locations    task_locations[]
  task_providers    task_providers[]
  orders            orders[]
}

model task_locations {
  id         String                   @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  task_id    String                   @db.Uuid
  label      String?                  @db.VarChar(100)
  address    String                   @db.Text
  location   Unsupported("geometry")?
  stop_order Int                      @default(0)
  custom_tasks custom_tasks           @relation(fields: [task_id], references: [id], onDelete: Cascade)

  @@index([task_id])
}

model task_providers {
  id           String             @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  task_id      String             @db.Uuid
  provider_id  String             @db.Uuid
  status       String             @default("accepted") @db.VarChar(20) // accepted | completed
  work_status  String?            @db.VarChar(20) // null | on_the_way | arrived | in_progress | completed
  accepted_at  DateTime           @default(now()) @db.Timestamp(6)
  completed_at DateTime?          @db.Timestamp(6)
  payout_confirmed Boolean        @default(false)
  payout_at     DateTime?         @db.Timestamp(6)
  custom_tasks  custom_tasks      @relation(fields: [task_id], references: [id])
  provider_profiles provider_profiles @relation(fields: [provider_id], references: [id])
  orders        orders[]

  @@unique([task_id, provider_id])
  @@index([provider_id])
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model order_attachments {
  id         String    @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  order_id   String    @db.Uuid
  file_url   String
  created_at DateTime? @default(now()) @db.Timestamp(6)
  orders     orders    @relation(fields: [order_id], references: [id], onDelete: NoAction, onUpdate: NoAction, map: "fk_order_attachment")
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model order_items {
  id              String   @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  order_id        String   @db.Uuid
  service_id      String   @db.Uuid
  pricing_type_id String   @db.Uuid
  quantity        Int?     @default(1)
  price           Decimal? @db.Decimal(12, 2)
  subtotal        Decimal? @db.Decimal(12, 2)
  orders          orders   @relation(fields: [order_id], references: [id], onDelete: NoAction, onUpdate: NoAction, map: "fk_order")
  services        services @relation(fields: [service_id], references: [id], onDelete: NoAction, onUpdate: NoAction, map: "fk_service")
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model order_locations {
  id       String                   @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  order_id String                   @db.Uuid
  address  String?
  location Unsupported("geometry")?
  orders   orders                   @relation(fields: [order_id], references: [id], onDelete: NoAction, onUpdate: NoAction, map: "fk_order_location")
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model orders {
  id                String              @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  customer_id       String              @db.Uuid
  provider_id       String              @db.Uuid
  custom_task_id    String?             @db.Uuid
  task_provider_id  String?             @db.Uuid
  status            String?             @default("pending") @db.VarChar(30)
  total_price       Decimal?            @db.Decimal(12, 2)
  platform_fee      Decimal?            @db.Decimal(12, 2)
  additional_fee    Decimal?            @default(0) @db.Decimal(12, 2)
  description       String?
  work_date         DateTime?           @db.Date
  created_at        DateTime?           @default(now()) @db.Timestamp(6)
  start_date        DateTime?           @db.Timestamp(6)
  end_date          DateTime?           @db.Timestamp(6)
  assignment_type   String?             @default("manual") @db.VarChar(20)
  payout_confirmed  Boolean             @default(false)
  payout_at         DateTime?           @db.Timestamp(6)
  order_attachments order_attachments[]
  order_items       order_items[]
  order_locations   order_locations[]
  profiles_customer profiles_customer   @relation(fields: [customer_id], references: [id], onDelete: NoAction, onUpdate: NoAction)
  provider_profiles provider_profiles   @relation(fields: [provider_id], references: [id], onDelete: NoAction, onUpdate: NoAction)
  payments          payments[]
  reviews           reviews?
  custom_tasks      custom_tasks?       @relation(fields: [custom_task_id], references: [id], onDelete: NoAction, onUpdate: NoAction)
  task_provider     task_providers?     @relation(fields: [task_provider_id], references: [id], onDelete: NoAction, onUpdate: NoAction)
  provider_schedules provider_schedules[]
  order_extensions  order_extensions[]
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model payments {
  id           String    @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  order_id     String    @db.Uuid
  method       String?   @db.VarChar(50)
  status       String?   @default("pending") @db.VarChar(30)
  amount       Decimal?  @db.Decimal(12, 2)
  paid_at      DateTime? @db.Timestamp(6)
  created_at   DateTime? @default(now()) @db.Timestamp(6)
  payment_proof String?  @db.Text
  orders       orders    @relation(fields: [order_id], references: [id], onDelete: NoAction, onUpdate: NoAction, map: "fk_payment_order")
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model pricing_types {
  id                      String                    @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  name                    String                    @db.VarChar(50)
  description             String?
  default_unit            String?
  category_id             String?                   @db.Uuid
  categories              categories?               @relation(fields: [category_id], references: [id], onDelete: NoAction, onUpdate: NoAction)
  provider_service_prices provider_service_prices[]
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model provider_documents {
  id            String            @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  provider_id   String            @db.Uuid
  type          String            @db.VarChar(30)
  file_url      String
  category_id   String?           @db.Uuid
  description   String?
  created_at    DateTime?         @default(now()) @db.Timestamp(6)
  provider_profiles provider_profiles @relation(fields: [provider_id], references: [id], onDelete: Cascade)

  @@index([provider_id])
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model provider_payout_methods {
  id             String    @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  provider_id    String    @db.Uuid
  type           String?   @db.VarChar(50)
  provider_name  String?   @db.VarChar(100)
  account_number String?   @db.VarChar(100)
  account_name   String?   @db.VarChar(150)
  created_at     DateTime? @default(now()) @db.Timestamp(6)
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model provider_schedules {
  id            String            @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  provider_id   String            @db.Uuid
  work_date     DateTime          @db.Date
  is_booked     Boolean           @default(false)
  order_id      String?           @db.Uuid
  created_at    DateTime?         @default(now()) @db.Timestamp(6)
  provider_profiles provider_profiles @relation(fields: [provider_id], references: [id])
  orders            orders?           @relation(fields: [order_id], references: [id])

  @@unique([provider_id, work_date])
  @@index([provider_id, work_date])
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model provider_service_prices {
  id                  String            @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  provider_service_id String            @db.Uuid
  pricing_type_id     String            @db.Uuid
  price               Decimal           @db.Decimal(12, 2)
  created_at          DateTime?         @default(now()) @db.Timestamp(6)
  unit                String?
  pricing_types       pricing_types     @relation(fields: [pricing_type_id], references: [id], onDelete: NoAction, onUpdate: NoAction, map: "fk_price_type")
  provider_services   provider_services @relation(fields: [provider_service_id], references: [id], onDelete: NoAction, onUpdate: NoAction, map: "fk_ps_price")
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model provider_services {
  id                      String                    @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  provider_id             String                    @db.Uuid
  service_id              String                    @db.Uuid
  description             String?
  created_at              DateTime?                 @default(now()) @db.Timestamp(6)
  provider_service_prices provider_service_prices[]
  services                services                  @relation(fields: [service_id], references: [id], onDelete: NoAction, onUpdate: NoAction)
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model reports {
  id              String    @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  reporter_id     String    @db.Uuid
  reporter_role   String    @db.VarChar(20)
  order_id        String?   @db.Uuid
  subject         String    @db.VarChar(200)
  description     String    @db.Text
  attachments     String[]  @default([])
  status          String    @default("open") @db.VarChar(20)
  admin_response  String?   @db.Text
  created_at      DateTime? @default(now()) @db.Timestamp(6)
  updated_at      DateTime? @default(now()) @db.Timestamp(6)
  resolved_at     DateTime? @db.Timestamp(6)
  users           users     @relation(fields: [reporter_id], references: [id])

  @@index([reporter_id])
  @@index([status])
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model order_extensions {
  id                String    @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  order_id          String    @db.Uuid
  provider_id       String    @db.Uuid
  customer_id       String    @db.Uuid
  requested_date    DateTime  @db.Date
  additional_cost   Decimal   @db.Decimal(12, 2)
  platform_fee_rate Decimal   @db.Decimal(3, 2)
  extension_count   Int       @default(1)
  status            String    @default("pending") @db.VarChar(20)
  response_note     String?
  created_at        DateTime? @default(now()) @db.Timestamp(6)
  orders            orders    @relation(fields: [order_id], references: [id])

  @@index([order_id])
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model roles {
  id          Int       @id @default(autoincrement())
  name        String    @unique @db.VarChar(50)
  description String?
  created_at  DateTime? @default(now()) @db.Timestamp(6)
  users       users[]
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model services {
  id                String              @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  category_id       String              @db.Uuid
  name              String              @db.VarChar(150)
  description       String?
  created_at        DateTime?           @default(now()) @db.Timestamp(6)
  order_items       order_items[]
  provider_services provider_services[]
  categories        categories          @relation(fields: [category_id], references: [id], onDelete: NoAction, onUpdate: NoAction, map: "fk_service_category")
}

/// This table contains check constraints and requires additional setup for migrations. Visit https://pris.ly/d/check-constraints for more info.
model spatial_ref_sys {
  srid      Int     @id
  auth_name String? @db.VarChar(256)
  auth_srid Int?
  srtext    String? @db.VarChar(2048)
  proj4text String? @db.VarChar(2048)
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model users {
  id                                 String                  @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  role_id                            Int
  email                              String?                 @unique @db.VarChar(255)
  phone                              String?                 @unique @db.VarChar(20)
  password_hash                      String?
  google_id                          String?                 @db.VarChar(255)
  is_phone_verified                  Boolean?                @default(false)
  is_email_verified                  Boolean?                @default(false)
  status                             String?                 @default("active") @db.VarChar(20)
  created_at                         DateTime?               @default(now()) @db.Timestamp(6)
  updated_at                         DateTime?               @default(now()) @db.Timestamp(6)
  custom_tasks                       custom_tasks[]
  profiles_customer                  profiles_customer?
  provider_locations                 provider_locations?
  provider_profiles                  provider_profiles?
  reports                            reports[]
  reviews_reviews_customer_idTousers reviews[]               @relation("reviews_customer_idTousers")
  reviews_reviews_provider_idTousers reviews[]               @relation("reviews_provider_idTousers")
  user_devices                       user_devices[]
  roles                              roles                   @relation(fields: [role_id], references: [id], onDelete: NoAction, onUpdate: NoAction, map: "fk_user_role")

  @@index([email], map: "idx_users_email")
  @@index([google_id], map: "idx_users_google_id")
  @@index([phone], map: "idx_users_phone")
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model profiles_customer {
  id         String    @id(map: "profiles_pkey") @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  user_id    String    @unique(map: "profiles_user_id_key") @db.Uuid
  full_name  String    @db.VarChar(150)
  nickname   String?   @db.VarChar(100)
  birth_date DateTime? @db.Date
  gender     String?   @db.VarChar(10)
  address    String?   @db.Text
  avatar_url String?
  created_at DateTime? @default(now()) @db.Timestamp(6)
  updated_at DateTime? @default(now()) @db.Timestamp(6)
  orders     orders[]
  users      users     @relation(fields: [user_id], references: [id], onDelete: Cascade, onUpdate: NoAction, map: "fk_profile_user")

  @@index([user_id], map: "idx_profiles_user_id")
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model provider_profiles {
  id                  String    @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  user_id             String    @unique @db.Uuid
  full_name           String    @db.VarChar(100)
  nickname            String?   @db.VarChar(50)
  gender              String?   @db.VarChar(10)
  birth_date          DateTime? @db.Date
  phone               String?   @db.VarChar(20)
  address             String?
  domicile            String?   @db.VarChar(100)
  profile_photo       String?
  ktp_photo           String?
  selfie_photo        String?
  is_verified         Boolean?  @default(false)
  verification_status String?   @default("pending") @db.VarChar(20)
  verification_notes  String?
  is_active           Boolean?  @default(true)
  onboarding_completed Boolean? @default(false)
  custom_task_enabled Boolean?  @default(false)
  service_available   Boolean   @default(true)
  task_available      Boolean   @default(true)
  rating              Decimal?  @default(0) @db.Decimal(2, 1)
  total_jobs          Int?      @default(0)
  created_at          DateTime? @default(now()) @db.Timestamp(6)
  updated_at          DateTime? @default(now()) @db.Timestamp(6)
  total_reviews       Int?      @default(0)
  portfolios          String[]  @default([])
  orders              orders[]
  task_providers      task_providers[]
  provider_documents      provider_documents[]
  provider_schedules      provider_schedules[]
  identity_verifications  identity_verifications?
  users                   users     @relation(fields: [user_id], references: [id], onDelete: Cascade, onUpdate: NoAction, map: "fk_provider_user")
}

/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model provider_locations {
  id          String                   @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  provider_id String                   @unique @db.Uuid
  address     String?
  location    Unsupported("geometry")?
  users       users                    @relation(fields: [provider_id], references: [id], onDelete: NoAction, onUpdate: NoAction, map: "fk_provider")

  @@index([location], map: "provider_locations_geo_idx", type: Gist)
}

/// This table contains check constraints and requires additional setup for migrations. Visit https://pris.ly/d/check-constraints for more info.
/// This model contains row level security and requires additional setup for migrations. Visit https://pris.ly/d/row-level-security for more info.
model reviews {
  id                               String    @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  order_id                         String    @unique @db.Uuid
  customer_id                      String    @db.Uuid
  provider_id                      String    @db.Uuid
  rating                           Int
  review                           String?
  created_at                       DateTime? @default(now()) @db.Timestamp(6)
  updated_at                       DateTime? @default(now()) @db.Timestamp(6)
  users_reviews_customer_idTousers users     @relation("reviews_customer_idTousers", fields: [customer_id], references: [id], onDelete: Cascade, onUpdate: NoAction, map: "fk_review_customer")
  orders                           orders    @relation(fields: [order_id], references: [id], onDelete: Cascade, onUpdate: NoAction, map: "fk_review_order")
  users_reviews_provider_idTousers users     @relation("reviews_provider_idTousers", fields: [provider_id], references: [id], onDelete: Cascade, onUpdate: NoAction, map: "fk_review_provider")
}

model identity_verifications {
  id                String   @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  provider_id       String   @unique @db.Uuid
  nik               String?
  ocr_full_name     String?
  ocr_birth_place   String?
  ocr_birth_date    String?
  ocr_address       String?
  ocr_gender        String?
  ocr_blood_type    String?
  ocr_religion      String?
  ocr_raw_result    Json?    @db.JsonB
  face_match_score  Float?
  face_match_status String   @default("pending") @db.VarChar(20)
  liveness_data     Json?    @db.JsonB
  liveness_status   String   @default("pending") @db.VarChar(20)
  created_at        DateTime @default(now()) @db.Timestamp(6)
  verified_at       DateTime? @db.Timestamp(6)
  provider_profiles provider_profiles @relation(fields: [provider_id], references: [id], onDelete: Cascade)

  @@index([provider_id])
}

model user_devices {
  id          String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  user_id     String   @db.Uuid
  fcm_token   String   @unique
  device_type String
  device_name String?
  created_at  DateTime @default(now()) @db.Timestamptz(6)
  updated_at  DateTime @updatedAt @db.Timestamptz(6)
  users       users    @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@index([user_id])
}
